crates/strand-compiler/tests/snapshots/diagnostics__chained_comparison.snap
---
source: crates/strand-compiler/tests/diagnostics.rs
expression: report(src)
---
syntax::chained_comparison

  × comparisons cannot be chained
   ╭─[e.strand:1:15]
 1 │ let a = x < y < z
   ·               ┬
   ·               ╰── second comparison
   ╰────
  help: combine them with `&&`: `x < y && y < z`
