crates/strand-compiler/tests/snapshots/diagnostics__missing_value.snap
---
source: crates/strand-compiler/tests/diagnostics.rs
expression: report(src)
---
syntax::expected

  × expected an expression, found `}`
   ╭─[e.strand:2:13]
 1 │ component A {
 2 │   box { bg: }
   ·             ┬
   ·             ╰── expected an expression
 3 │ }
   ╰────
